<resources>
    <string name="BASE_URL">http://178.128.125.242:4043/api</string>
    <string name="app_name">Laporin</string>
    <string name="app_name_up">LAPORIN</string>
    <string name="app_detail">Pelaporan Jalan Rusak</string>
    <string name="form_empty">Form login tidak boleh kosong</string>
    <string name="login_detail1">Laporkan jalanan rusak di sekitarmu.</string>
    <string name="login_detail2">Mulai dengan masuk di sini.</string>
    <string name="register_link"><u>Daftar di sini.</u>.</string>
    <string name="login_link"><u>Masuk di sini.</u>.</string>
    <string name="forget_password"><u>Lupa password?</u></string>
    <string name="register_detail1">Isikan data diri Anda pada form di bawah ini untuk daftar.</string>
    <string name="tag_login">LOGIN_ACTIVITY</string>
    <string name="tag_register">REGISTER_ACTIVITY</string>
    <string name="upload_tittle">Buat Laporan</string>
    <string name="select_district">Pilih Kecamatan</string>

    <!-- res/values/strings.xml -->
    <integer name="swing_anim_time">750</integer>
    <string name="title_activity_maps">Pilih Lokasi</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCFPjf336ZfVlYqco7IrZKFtmkgJPRcYFY</string>
</resources>
