<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:transitionName="app_title" />

    <TextView
        android:id="@+id/app_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_detail"
        android:textColor="#7D7D7D"
        android:textSize="16sp"
        android:transitionName="app_detail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_detail1"
        android:textColor="#BDBDBD"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/login_detail2"
        android:textColor="#BDBDBD"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_text_edit"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:transitionName="email_et" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_text_edit"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:transitionName="password_et" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="32dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_button"
            android:drawableRight="@drawable/ic_arrow_forward_white_24dp"
            android:text="Mulai Sekarang        "
            android:textColor="@android:color/white"
            android:transitionName="auth_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/forget_password"
            android:textColor="#BDBDBD"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Belum punya akun?"
                android:textColor="#BDBDBD"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/register_navigate_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/register_link"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>